<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingsBackConstraint"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/settings_background"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Switch
        android:id="@+id/openMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:shadowColor="@color/black"
        android:switchPadding="105dp"
        android:text="@string/open_music_inside_app"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/settingsBackConstraint"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <Switch
        android:id="@+id/openClickSounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="15dp"
        android:shadowColor="@color/black"
        android:switchPadding="163dp"
        android:text="@string/click_sounds"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/purple_700"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/openMusic"
        app:switchPadding="90dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/reportProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/report_a_problem"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/openClickSounds" />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="42dp"
        android:id="@+id/rightIcon"
        android:layout_marginEnd="50dp"
        android:src="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/openClickSounds" />
    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingStart="15dp"
        android:layout_marginTop="35dp"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/reportProblem"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rightIcon" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/all_right_reserved"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>