<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABD2D8"
    tools:context=".UI.AddFragment">
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/add_your_work"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:ellipsize="end"
            android:hint="@string/enter_basic_title"
            android:maxLines="2"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittextUnderBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:focusable="true"
            android:hint="@string/enter_your_work"
            android:textColorHint="@color/black"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:elevation="20dp"
        android:orientation="vertical"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
        tools:ignore="UnusedAttribute">
        <TextView
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="@string/click_for_date1"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="10dp"
        android:elevation="20dp"
        android:orientation="vertical"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        tools:ignore="UnusedAttribute">
        <TextView
            android:id="@+id/editTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="@string/click_for_date"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>