<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B1B5C8"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/cancelImageInReport"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardViewReportProblem"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="20dp"
        app:cardCornerRadius="10dp"
        tools:ignore="UnusedAttribute" >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reportProblemEditText"
            android:hint="@string/provide_problem_and_send_us"
            android:padding="15dp"
            />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewReportProblem"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:id="@+id/bt_cancel"
            android:textSize="15sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send"
            android:padding="10dp"
            android:id="@+id/bt_send"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>